# poma

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  constraints.txt  docker-compose.vm.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  sitecustomize.py
.github/workflows/: auto-cicd.yml  bootstrap-gcp-wif.yml  build-app-image.yml  ci.yml  clear-rebalance-state.yml  deploy-gcp-vm.yml  deploy-gcp.yml  deploy-paper-gcp-vm.yml  discover-telegram-chat-id.yml  ib-gateway-ops.yml  reconcile-orders.yml  refresh-gateway-helper.yml
docs/: architecture.md  configuration.md  deployment-gcp-free-tier.md  e2-micro-image-pull-deploy.md  gateway-helper-refresh.md  ib-gateway-startup-diagnosis.md  ibkr-gateway-operations.md  operations-runbook.md  operator-setup.md  portfolio-management.md  production-readiness.md  strategy-contract.md  workflow-runbook.md
docs/adr/: 0001-ibkr-credentials-in-github-secrets.md  0002-dev-gateway-configure-paper-requires-2fa.md  0002-dev-gateway-configure-paper-validation.md  0002-dev-gateway-pr-checks-avoid-2fa.md  0003-ibkr-market-data-readiness-check.md  0004-market-data-entitlement-probe-ladder.md
docs/strategies/: rank-velocity-size-equal-weight.md
infra/gcp-free-tier/: budget.tf  main.tf  outputs.tf  startup.sh  variables.tf  versions.tf
infra/gcp-wif-bootstrap/: README.md  main.tf  outputs.tf  variables.tf
ops/cron/: poma.cron  run_cron_job.sh  run_logged.sh
ops/scripts/: bootstrap_vps.sh  configure_tailscale_remote.sh  deploy.sh  diagnose_ib_gateway_runtime.py  ensure_ibgateway_service.sh  ensure_sitecustomize_import.py  get_telegram_chat_id.py  harden_ib_gateway_runner.py  import_gcp_wif_bootstrap_state.sh  install_ibc_config_helper.py  refresh_gateway_helper.sh  render_env.py  repair_ib_gateway_runtime.py  resolve_gcp_deploy_env.sh  run_gateway_ops_workflow.py  run_reconcile_orders_workflow.sh  sitecustomize.py  usercustomize.py  validate_data_provider.py  validate_runtime_config.py  visible_startup_diag.py  wait_ib_gateway_2fa.py  (+1 more)
tests/: conftest.py  test_account_snapshot.py  test_broker_connect_retry.py  test_broker_order_lifecycle.py  test_clear_rebalance_state_workflow.py  test_cli.py  test_config.py  test_cron_logging.py  test_data.py  test_deploy_gateway_repair.py  test_deploy_performance_observability.py  test_deploy_time_checks_contract.py  test_docker_runtime_permissions.py  test_docs_consistency.py  test_engine.py  test_engine_account_snapshot_retry.py  test_engine_order_lifecycle.py  test_execution_manager.py  test_execution_policy.py  test_execution_pricing.py  test_gateway_ops_ibkr_disclaimer.py  test_gateway_ops_performance.py  test_gateway_service_repair.py  test_gateway_sitecustomize_hook.py  test_gcp_env_resolver.py  test_gcp_instance_replacement.py  test_gcp_startup_script.py  test_github_workflows.py  test_health.py  test_history.py  test_ib_gateway_diagnostics.py  test_ibc_config_helper_installer.py  test_ibc_service_engine_contract.py  test_ibkr_market_data_probe.py  test_ibkr_trading_permission_probe.py  test_journal.py  test_notifications.py  test_order_lifecycle.py  test_order_reconcile_closure.py  test_order_store.py  (+12 more)
(+40 files in other folders)
