[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poma"
version = "0.1.0"
description = "Strategy-allocated US top-500 dual-score rebalancer for a single VPS with IBKR."
requires-python = ">=3.11"
dependencies = [
  "ib-insync>=0.9.86",
  "pandas>=2.2.2",
  "pandas-market-calendars>=4.4.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "yfinance>=0.2.64"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.5"
]

[project.scripts]
poma = "poma.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"ops/scripts/diagnose_ib_gateway_runtime.py" = ["E", "F", "I", "B", "UP", "SIM"]
"ops/scripts/sitecustomize.py" = ["E501"]
"src/poma/execution_manager.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-q --cov=poma --cov-report=term-missing"
testpaths = ["tests"]
